@@ -1,87 +1,0 @@
-<!DOCTYPE UI><UI version="3.2" stdsetdef="1">
-<class>settings_externalbrowser</class>
-<author>Gary Cramblitt</author>
-<widget class="QWidget">
-    <property name="name">
-        <cstring>ExternalBrowser</cstring>
-    </property>
-    <property name="geometry">
-        <rect>
-            <x>0</x>
-            <y>0</y>
-            <width>398</width>
-            <height>128</height>
-        </rect>
-    </property>
-    <property name="caption">
-        <string>Form1</string>
-    </property>
-    <grid>
-        <property name="name">
-            <cstring>unnamed</cstring>
-        </property>
-        <widget class="QButtonGroup" row="0" column="0">
-            <property name="name">
-                <cstring>buttonGroup1</cstring>
-            </property>
-            <property name="title">
-                <string>When Article is Double-Clicked</string>
-            </property>
-            <vbox>
-                <property name="name">
-                    <cstring>unnamed</cstring>
-                </property>
-                <widget class="QRadioButton">
-                    <property name="name">
-                        <cstring>kcfg_ExternalBrowserUseKdeDefault</cstring>
-                    </property>
-                    <property name="text">
-                        <string>Use default KDE web browser</string>
-                    </property>
-                    <property name="checked">
-                        <bool>true</bool>
-                    </property>
-                </widget>
-                <widget class="QLayoutWidget">
-                    <property name="name">
-                        <cstring>layout1</cstring>
-                    </property>
-                    <hbox>
-                        <property name="name">
-                            <cstring>unnamed</cstring>
-                        </property>
-                        <widget class="QRadioButton">
-                            <property name="name">
-                                <cstring>kcfg_ExternalBrowserUseCustomCommand</cstring>
-                            </property>
-                            <property name="text">
-                                <string>Use this command:</string>
-                            </property>
-                        </widget>
-                        <widget class="QLineEdit">
-                            <property name="name">
-                                <cstring>kcfg_ExternalBrowserCustomCommand</cstring>
-                            </property>
-                            <property name="enabled">
-                                <bool>false</bool>
-                            </property>
-                            <property name="text">
-                                <string>mozilla '%u'</string>
-                            </property>
-                        </widget>
-                    </hbox>
-                </widget>
-            </vbox>
-        </widget>
-    </grid>
-</widget>
-<connections>
-    <connection>
-        <sender>kcfg_ExternalBrowserUseCustomCommand</sender>
-        <signal>toggled(bool)</signal>
-        <receiver>kcfg_ExternalBrowserCustomCommand</receiver>
-        <slot>setEnabled(bool)</slot>
-    </connection>
-</connections>
-<layoutdefaults spacing="6" margin="11"/>
-</UI>
