@@ -1,5 +1,6 @@
-<!DOCTYPE UI><UI version="3.2" stdsetdef="1">
+<!DOCTYPE UI><UI version="3.3" stdsetdef="1">
 <class>settings_general</class>
+<author>Teemu Rytilahti</author>
 <widget class="QWidget">
     <property name="name">
         <cstring>General</cstring>
@@ -8,8 +9,8 @@
         <rect>
             <x>0</x>
             <y>0</y>
-            <width>219</width>
-            <height>66</height>
+            <width>241</width>
+            <height>97</height>
         </rect>
     </property>
     <property name="caption">
@@ -19,21 +20,34 @@
         <property name="name">
             <cstring>unnamed</cstring>
         </property>
-        <widget class="QCheckBox">
+        <widget class="QGroupBox">
             <property name="name">
-                <cstring>kcfg_FetchOnStartup</cstring>
+                <cstring>groupBox3</cstring>
             </property>
-            <property name="text">
-                <string>Fetch all feeds on startup</string>
+            <property name="title">
+                <string>Startup &amp;&amp; Exit</string>
             </property>
-        </widget>
-        <widget class="QCheckBox">
-            <property name="name">
-                <cstring>kcfg_MarkAllReadOnExit</cstring>
-            </property>
-            <property name="text">
-                <string>Mark all entries as read on exit</string>
-            </property>
+            <vbox>
+                <property name="name">
+                    <cstring>unnamed</cstring>
+                </property>
+                <widget class="QCheckBox">
+                    <property name="name">
+                        <cstring>kcfg_FetchOnStartup</cstring>
+                    </property>
+                    <property name="text">
+                        <string>Fetch all feeds on startup</string>
+                    </property>
+                </widget>
+                <widget class="QCheckBox">
+                    <property name="name">
+                        <cstring>kcfg_MarkAllReadOnExit</cstring>
+                    </property>
+                    <property name="text">
+                        <string>Mark all entries as read on exit</string>
+                    </property>
+                </widget>
+            </vbox>
         </widget>
     </vbox>
 </widget>
