@@ -9,6 +9,7 @@ New Features:
 
 	 Configuration dialog added -tpr
 	 Ability to mark all entries as read on exit -tpr
+	 Ability to change middle mouse button behaviour in browser -tpr
 
 Bug Fixes:
 
